// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCalendar should create calendar starting at date 1`] = `
Array [
  Object {
    "date": 2050-11-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2050-11-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2050-11-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2050-12-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2050-12-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2051-01-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should create default calendar 1`] = `
Array [
  Object {
    "date": 1999-12-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-01-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": true,
  },
  Object {
    "date": 2000-01-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should navigate into the future 1`] = `
Array [
  Object {
    "date": 2000-01-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should navigate into the future 2`] = `
Array [
  Object {
    "date": 2000-02-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-26T23:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-27T23:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-28T23:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-29T23:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-30T23:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-31T23:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-04-01T23:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should navigate into the past 1`] = `
Array [
  Object {
    "date": 1999-11-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-11-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": true,
  },
  Object {
    "date": 2000-01-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should navigate into the past 2`] = `
Array [
  Object {
    "date": 1999-11-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-11-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 1999-12-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;
